<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/textViewIngresarDicose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dicose"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/textViewIngresarArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/area"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/textViewIngresarLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitud"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/textViewIngresarLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitud"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/textViewIngresarUsoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uso_principal"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnBackground"
        android:textColor="@color/btnLabel"
        android:text="@string/guardar"/>
</LinearLayout>